Fix some more alignment issues

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ button {
 .hero {
     background-color: #1F2937;
     color: #F9FAF8;
-    padding: 0px 300px;
+    padding: 0px 600px 100px;
     display: flex;
     flex-direction: column;
 }
@@ -28,7 +28,7 @@ button {
     list-style: none;
     display: flex;
     justify-content: space-between;
-    padding: 16px;
+    padding: 16px 16px 58px 16px;
     flex: 1;
 }
 
@@ -39,7 +39,7 @@ button {
 
 .right-links {
     display: flex;
-    gap: 20px;
+    gap: 30px;
     font-size: 18px;
 }
 
@@ -68,7 +68,7 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 32px;
+    padding: 32px 32px 80px;
     flex: 1;
 }
 
@@ -83,7 +83,7 @@ button {
     display: flex;
     justify-content: center;
     padding: 24px;
-    gap: 48px
+    gap: 64px
 }
 
 .card {
@@ -115,7 +115,7 @@ button {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 180px 260px;
+    padding: 180px 650px;
     flex: 1;
 }
 
@@ -133,9 +133,10 @@ button {
 
 .CTA {
     background-color: #3882F6;
+    border-radius: 8px;
     color: #F9FAF8;
-    padding: 48px;
-    margin: 48px;
+    padding: 48px 100px;
+    margin: 130px 680px;
     display: flex;
     justify-content: space-between;
     flex: 1;
